created ByMonth endpoint

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataSource": {
+    "FileName": "apiStorage.sqlite"
+  } 
 }
